syntax = "proto3";

option java_package = "com.medicalinsurance.protobuf";
option java_outer_classname = "ConsentPayload";

message ConsentTransactionPayload {

    enum PayloadType {
        TYPE_UNSET = 0;
        GRANT_ACCESS = 1;
        REVOKE_ACCESS = 2;
        ADD_CLIENT = 3;
    }

    PayloadType payload_type = 1;

    ActionOnAccess grant_access = 2;
    ActionOnAccess revoke_access = 3;
    Client create_client = 4;
}

message Client {
    string public_key = 1;
    repeated Permission permissions = 2;
}

message ActionOnAccess {
    string doctor_pkey = 1;
    string patient_pkey = 2;
}

message Permission {
    enum PermissionType {
        PERMISSION_TYPE_UNSET = 0;

        READ_CLINIC = 100;
        READ_OWN_CLINIC = 101;

        READ_DOCTOR = 200;
        READ_OWN_DOCTOR = 201;

        READ_PATIENT = 300;
        READ_OWN_PATIENT = 301;

        READ_LAB = 800;
        READ_OWN_LAB = 801;

        READ_LAB_TEST = 600;
        READ_OWN_LAB_TEST = 601;
        WRITE_LAB_TEST = 602;

        READ_PULSE = 700;
        READ_OWN_PULSE = 701;
        WRITE_PULSE = 702;

        READ_CLAIM = 400;
        READ_OWN_CLAIM = 401;
        WRITE_CLAIM = 402;

        REVOKE_ACCESS = 500;
        GRANT_ACCESS = 501;
    }

    PermissionType type = 1;
}